<resources>
    <string name="app_name">BoxScore</string>
    <string name="startGame">開始比賽</string>
    <string name="teamManage">球隊管理</string>
    <string name="gameHistory">歷史紀錄</string>
    <string name="setting">個人設定</string>
    <string name="gamenamesetting">名稱設定</string>
    <string name="playerlist">球員名單</string>
    <string name="detailsetting">操作設定</string>

    <!-- TODeletemove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="gameTitle">比賽名稱</string>
    <string name="gameTitleHint" translatable="false">Ex:新生盃、友誼賽</string>
    <string name="opponentName">對手名稱 (必填)</string>
    <string name="opponentNameHint" translatable="false">Ex: 電機A、環工系</string>
    <string name="gameDate">比賽日期</string>
    <string name="gameDateHint">點擊選擇日期</string>
    <string name="startingPlayers">先發球員</string>
    <string name="substitutePlayers">替補球員</string>
    <string name="unregisteredPlayers">未登錄球員</string>
    <string name="playerLimitToast">單場登入球員最多為15人</string>
    <string name="startingPlayerLimitToast">先發球員已達上限</string>
    <string name="minute">分鐘</string>
    <string name="quarterLength">單節時間</string>
    <string name="totalQuarter">總節數</string>
    <string name="quarter">節</string>
    <string name="maxFoul">最大犯規次數</string>
    <string name="times">次</string>
    <string name="timeoutAmount">暫停次數</string>
    <string name="firstHalf">上半場</string>
    <string name="secondhalf">下半場</string>
    <string name="yourTeam">所屬球隊</string>
    <string name="changePlayer">更換球員</string>
    <string name="dataRecord">數據紀錄</string>
    <string name="playerOnCourt">場上球員</string>
    <string name="dataStatistic">數據統計</string>
    <string name="offense">進攻</string>
    <string name="defense">防守</string>
    <string name="twoPointShot">二分出手</string>
    <string name="twoPointShotMade">二分命中</string>
    <string name="twoPointShotMiss">二分失手</string>
    <string name="defensiveRebound">防守籃板</string>
    <string name="threePointShot">三分出手</string>
    <string name="threePointShotMade">三分命中</string>
    <string name="threePointShotMiss">三分失手</string>
    <string name="freeThrowShot">罰球出手</string>
    <string name="freeThrowShotMade">罰球命中</string>
    <string name="freeThrowShotMiss">罰球失手</string>
    <string name="assist">助攻</string>
    <string name="offensiveRebound">進攻籃板</string>
    <string name="steal">抄截</string>
    <string name="block">火鍋</string>
    <string name="foul">犯規</string>
    <string name="offensive_foul">進攻犯規</string>
    <string name="defensive_foul">防守犯規</string>
    <string name="turnover">失誤</string>
    <string name="cancel">取消</string>
    <string name="isShotMade">是否命中</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="points">得分</string>
    <string name="goBack">返回</string>
    <string name="name">姓名</string>
    <string name="benchPlayer">板凳球員</string>
    <string name="undoHistory">操作紀錄</string>
    <string name="confirmGoBack">退出確認</string>
    <string name="goBackConfirmMessage">\n退出將失去目前輸入資料\n確定要退出嗎？</string>
    <string name="confirmExitDataRecord">退出比賽紀錄</string>
    <string name="discardGame">放棄比賽</string>
    <string name="save">儲存</string>
    <string name="createTeam">新增球隊</string>
    <string name="pleaseInputTeamName">請輸入隊名</string>
    <string name="confirm">確定</string>
    <string name="playersAmount">%d名成員</string>
    <string name="historyAmount">%d場比賽</string>
    <string name="createPlayer">新增球員</string>
    <string name="playerName">球員姓名</string>
    <string name="playerNameHint">Ex: 光頭哥哥</string>
    <string name="playerNumber">球員背號</string>
    <string name="position">位置</string>
    <string name="center">中鋒</string>
    <string name="powerFoward">大前鋒</string>
    <string name="smallFoward">小前鋒</string>
    <string name="shootingGuard">得分後衛</string>
    <string name="pointGuard">控球後衛</string>
    <string name="yourTeamName">%s隊</string>
    <string name="opponentTeamName">%s隊</string>
    <string name="finalScore" translatable="false">%d：%d</string>
    <string name="dateExample" translatable="false">2018年3月25日</string>
    <string name="gametitleDefault">友誼賽</string>
    <string name="teamBoxScore">球隊數據</string>
    <string name="playersBoxscore">球員數據</string>
    <string name="win">勝</string>
    <string name="lose">敗</string>
    <string name="firstQuarter">第一節</string>
    <string name="secondQuarter">第二節</string>
    <string name="thirdQuarter">第三節</string>
    <string name="forthQuarter">第四節</string>
    <string name="total">總和</string>
    <string name="quarterFilter">節數篩選</string>
    <string name="threePointInPie">三分球 %1$s</string>
    <string name="fieldGoalInPie">出手 %1$s</string>
    <string name="brightness">螢幕亮度</string>
    <string name="finger" translatable="false">%s指</string>
    <string name="none">無</string>
    <string name="progressbar_login">登入中...</string>
    <string name="progressbar_loading">資料同步中...</string>
    <string name="login_message_wrong_password">密碼錯誤</string>
    <string name="login_message_account_not_exist">帳號不存在</string>
    <string name="login_message_success">登入成功</string>
    <string name="login_message_invalid">輸入不符合規定</string>
    <string name="progressbar_signup">註冊中...</string>
    <string name="success">成功</string>
    <string name="sign_up_account_already_exist">此帳號已註冊</string>
    <string name="sign_up_account_invalid">帳號不符規定</string>
    <string name="sign_up_password_too_short">密碼長度不得小於6位</string>
    <string name="ask_resume_game_title">恢復比賽</string>
    <string name="ask_resume_game_message">"上次與\n%s 的比賽記錄尚未結束\n是否恢復比賽？\n\n警告：選擇\n「放棄並開新比賽」\n將刪除紀錄"</string>
    <string name="ask_resume_game_button_resume">恢復比賽</string>
    <string name="ask_resume_game_button_save_and_start">結束並開新比賽</string>
    <string name="ask_resume_game_button_discard">放棄並開新比賽</string>
    <string name="start_game_illegal_title">輸入未完成</string>
    <string name="start_game_illegal_message">必填項目不符合規定</string>
    <string name="simple_date_format">yyyy年MM月dd日</string>
    <string name="quick_game_team_name">快速遊戲</string>
    <string name="quick_game_team_id">quick_game</string>
    <string name="starting_players_count">　需求: 5人；目前: %d人</string>
    <string name="substitute_players_count">　最少: 1人；目前: %d人</string>
    <string name="max_foul_message">犯規次數最小為%d</string>
    <string name="min_foul_message">犯規次數最大為%d</string>
    <string name="max_quarter_length_message">單節時間最大值為%d分鐘</string>
    <string name="min_quarter_length_message">單節時間最小值為%d分鐘</string>
    <string name="max_total_quarter_message">總節數最大為%d節</string>
    <string name="min_total_quarter_message">總節數最小為%d節</string>
    <string name="max_timeout_first_half">上半場最大暫停次數為%d次</string>
    <string name="min_timeout_first_half">上半場最小暫停次數為%d次</string>
    <string name="max_timeout_second_half">下半場最大暫停次數為%d次</string>
    <string name="min_timeout_second_half">下半場最小暫停次數為%d次</string>
    <string name="change_player_off_game">請選擇下場球員</string>
    <string name="change_player_in_game">請選擇上場球員</string>
    <string name="ask_next_quarter_title">進入下一節</string>
    <string name="ask_next_quarter_message">進入下一節後若須補登資料，請透過上方補登按鈕操作</string>
    <string name="ask_save_title">結束比賽</string>
    <string name="ask_save_message">比賽是否結束並儲存結果？</string>
    <string name="dialog_delete_player_title">刪除確認</string>
    <string name="dialog_delete_player_message">確認從球隊移除 %s 的資料？</string>
    <string name="dialog_delete_team_title">刪除確認</string>
    <string name="dialog_delete_team_message">確認刪除 %s 的所有資料？</string>
    <string name="no_legal_team_title">請先建立球隊</string>
    <string name="no_legal_team_message">請先至少建立一個六人以上的球隊！ 是否轉跳至球隊管理？</string>
    <string name="foul_type_title">犯規類型</string>
    <string name="toast_cannot_create_excel">無法產生Excel檔</string>
    <string name="toast_url_in_clipboard">網址已複製至剪貼簿</string>
    <string name="share">分享</string>
    <string name="delete">刪除</string>
    <string name="exitDataRecordMessage">是否要退出比賽？  選擇「儲存」，下次可藉由開始比賽接續紀錄；  選擇「放棄比賽」將清除資料</string>


</resources>
