<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_gamenamesetting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wade8.boxscore.gamenamesetting.GameNameSettingFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/fragment_gamenamesetting_yourteam_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/yourTeam"
            android:textColor="@color/colorTextInMainButton"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_opponent_edittext"
            tools:layout_editor_absoluteX="0dp" />

        <Spinner
            android:id="@+id/fragment_gamenamesetting_yourteam_spinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_gamename"
            android:dropDownSelector="@drawable/shape_edittext_gamename_orange"
            android:dropDownVerticalOffset = "35dp"
            android:paddingHorizontal="5dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_yourteam_textview" />

        <TextView
            android:id="@+id/fragment_gamenamesetting_gametitle_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameTitle"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textColor="@color/colorTextInMainButton"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_yourteam_spinner"  />

        <EditText
            android:id="@+id/fragment_gamenamesetting_gametitle_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/shape_edittext_gamename"
            android:layout_marginTop="10dp"
            android:hint="@string/gameTitleHint"
            android:paddingHorizontal="5dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_gametitle_textview" />

        <TextView
            android:id="@+id/fragment_gamenamesetting_opponent_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingHorizontal="10dp"
            android:text="@string/opponentName"
            android:textColor="@color/colorTextInMainButton"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/fragment_gamenamesetting_opponent_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_gamename_illegal"
            android:hint="@string/opponentNameHint"
            android:paddingHorizontal="5dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_opponent_textview" />

        <TextView
            android:id="@+id/fragment_gamenamesetting_gamedate_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"
            android:text="@string/gameDate"
            android:textColor="@color/colorTextInMainButton"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_gametitle_edittext"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/fragment_gamenamesetting_gamedate_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_gamename"
            android:text="@string/gameDateHint"
            android:paddingHorizontal="5dp"
            android:gravity="center|start"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_gamenamesetting_gamedate_textview" />




    </android.support.constraint.ConstraintLayout>


</ScrollView>
